test_files/s_cproc/macro_object_expand/test_012/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_012/i.input:1:19: error: missing ')' in macro parameter list
 #define macro(/**/
                   ^
